# Janjic_kurs_7

./: .env.sample  Dockerfile  README.md  bot_test.py  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_is_pleasurable.py  0003_alter_habit_is_pleasurable.py  0004_alter_habit_time.py  0005_alter_habit_time.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py  0003_alter_user_chat_id.py  0004_alter_user_chat_id.py  0005_alter_user_chat_id.py
